src/objects/PSA_Expense_Type_GLA__c.object
<CustomObject>
    <description>This object will contain the mapping of Guidewire expense types to GLA Codes.</description>
    <fields>
        <fullName>PSA_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Since codes will vary by whether or not the expense is billable</description>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_GLA_Code_Id__c</fullName>
        <description>System generated sequential</description>
        <displayFormat>EGC-{0000}</displayFormat>
        <label>Expense GLA Code Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_Type__c</fullName>
        <description>List of Guidewire expense types</description>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Airfare - Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare - International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visas/Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi/Train/Public Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking/Tolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas for Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - GW Emp Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - With 3rd Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Per Diem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertain - GW Emp only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertain - With 3rd Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom - Mobile (Cell)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom - Non Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency exch/bank fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excess Baggage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Expense - T &amp; E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry/Dry Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postage/Courier Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation Exp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Prep Cost for Addtl State(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tips/Gratuities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept/Co Meetings &amp; Events</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_GLA_Code__c</fullName>
        <description>The GLA Code associated with the expense type</description>
        <label>GLA Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>PSA Expense Type GLA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Billable__c</columns>
        <columns>PSA_Expense_Type__c</columns>
        <columns>PSA_GLA_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PSA Expense Type GLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA Expense Type GLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>